# av-snippets

./: .gitignore
open-device/: main.c
record-audio/: Makefile  main.c
record-audio-gui/: CMakeLists.txt  main.cc  main.ui
